# agentic-math-discovery

./: .gitignore  CLAUDE.md  LICENSE  README.md  backtest.py  pyproject.toml  run.py
docs/: agent.md  api-reference.md  architecture.md  contributing.md  examples.md  getting-started.md  known-structures.md  scoring.md  solvers.md  structural-moves.md
src/: cli.py
src/agent/: controller.py  tools.py
src/core/: __init__.py  ast_nodes.py  signature.py
src/models/: cayley.py
src/moves/: __init__.py  engine.py
src/scoring/: __init__.py  engine.py
src/solvers/: __init__.py  fol_translator.py  mace4.py  parallel.py  prover9.py  router.py  z3_solver.py
src/utils/: display.py
tests/: test_backtest.py  test_core.py  test_integration.py  test_library.py  test_moves.py  test_scoring.py  test_solvers.py
